--- a/package.json
+++ b/package.json
@@ -5,33 +5,40 @@
     "keywords": [],
     "main": "src/index.jsx",
     "devDependencies": {
-      "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-      "@react-three/fiber": "^8.16.8",
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1",
-      "react-scripts": "5.0.1",
-      "three": "^0.166.1"
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@react-three/fiber": "^8.16.8",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-scripts": "5.0.1",
+        "three": "^0.166.1"
     },
     "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test --env=jsdom",
-      "eject": "react-scripts eject"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
     },
     "browserslist": {
-      "production": [">0.2%", "not dead", "not op_mini all"],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     },
     "overrides": {
-      "svgo": {
-        "nth-check": ">=2.0.2"
-      },
-      "react-scripts": {
-        "postcss": ">=8.4.31"
-      }
+        "svgo": {
+            "nth-check": ">=2.0.2"
+        },
+        "react-scripts": {
+            "postcss": ">=8.4.31"
+        }
+    },
+    "dependencies": {
+        "@react-three/drei": "^9.111.3"
     }
-  }
+}
