install and configure leva to controll 3d objects on canvas

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         }
     },
     "dependencies": {
-        "@react-three/drei": "^9.111.3"
+        "@react-three/drei": "^9.111.3",
+        "leva": "^0.9.35"
     }
 }
